k8s_manifests/flask_backend_manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-backend
  namespace: app-2025
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-flask-backend
  template:
    metadata:
      labels:
        app: demo-flask-backend
    spec:
      containers:
        - name: demo-flask-backend
          image: 135808912790.dkr.ecr.us-east-2.amazonaws.com/demo-flask-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      tolerations:
        - effect: NoSchedule
          key: eks.amazonaws.com/compute-type
          value: fargate
